--- a/work/studious-chef.html
+++ b/work/studious-chef.html
@@ -22,11 +22,12 @@
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
-				taylor wilkinson
+			<a href="../projects.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+				<p id="navTitle">taylor wilkinson</p>
+				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggleNavBar" aria-controls="toggleNavBar" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="#" class="nav-item nav-link">RESUME</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
@@ -46,21 +47,24 @@
 
 	<div class="container body-copy">
 		<div class="row full-row">
+			<div class="col-xs-12 col-md-6 mx-auto no-side-padding">
+				<figure id="noBorder">
+					<img src="../img/studious-chef-mockup-home.png" class=".img-fluid" alt="Mockup of The Studious Chef's browse page">
+				</figure>
+			</div>
+		</div>
+		<div class="row full-row">
 			<div class="col-lg-6 no-side-padding">
 				<h1>The Studious Chef</h1>
 			</div>
 		</div> <!-- title section -->
 
-		<div class="row">
-			<div class="col-lg-4">
-				<h2>team</h2>
-				<p>Individual project</p>
-			</div>
-			<div class="col-lg-4">
+		<div class="row full-row">
+			<div class="col-xs-12 col-md-6 col-lg-6 no-side-padding">
 				<h2>tools</h2>
 				<p>XAMPP, MySQL, PHP, HTML, CSS, AJAX</p>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-xs-12 col-md-6 col-lg-6 no-side-padding">
 				<h2>my role</h2>
 				<p>Web Developer & Designer</p>
 			</div>
@@ -70,6 +74,14 @@
 			<div class="col-lg-6">
 				<h2>brief</h2>
 				<p>Develop a web application using a database of our own choosing that implements a set of required technologies. The final course project for Internet Computing Technologies (IAT 352). 2017.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="../img/studious-chef-mockup-browse.png" alt="Mockup of The Studious Chef's browse page">
+					<figcaption>
+						Mockup of The Studious Chef's "Browse Recipes" page. April 2017.
+					</figcaption>
+				</figure>
 			</div>
 		</div>
 		<div class="row">
