--- a/work/times-past.html
+++ b/work/times-past.html
@@ -23,11 +23,12 @@
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
-				taylor wilkinson
+			<a href="../projects.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+				<p id="navTitle">taylor wilkinson</p>
+				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggleNavBar" aria-controls="toggleNavBar" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="#" class="nav-item nav-link">RESUME</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
@@ -46,6 +47,13 @@
 
 
 	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col-xs-12 col-md-6 mx-auto no-side-padding">
+				<figure>
+					<img src="../img/timesPast_lvl1Gems.png" class=".img-fluid" alt="Screen capture of Time's Past gameplay showing the player collecting gems">
+				</figure>
+			</div>
+		</div>
 		<div class="row full-row">
 			<div class="col-lg-6 no-side-padding">
 				<h1>Times Past</h1>
@@ -141,13 +149,8 @@
 				<h2>project management</h2>
 				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
 			</div>
-      <div class="col-lg-6">
-				<figure>
-					<img src="" alt="">
-					<figcaption>
-						[caption here. date.]
-					</figcaption>
-				</figure>
+			<div class="col-lg-6 embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Hel3uIEb6YU?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div> <!-- end of section :: project management -->
 
@@ -160,7 +163,7 @@
 				<button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button>
         <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button>
 			</div>
-      <div class="col-lg-6">
+			<div class="col-lg-6">
 				<figure>
 					<img src="" alt="">
 					<figcaption>
