--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,13 @@
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
-				taylor wilkinson
+
+			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+				<p id="navTitle">taylor wilkinson</p>
+				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggleNavBar" aria-controls="toggleNavBar" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,91 +39,116 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="#" class="nav-item nav-link">RESUME</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container" id="filter-bar">
-		<div class="row">
-			<div class="col">
-				<!-- General Project Types -->
-				<button class="filter-button" data-filter="all">All</button>
-				<button class="filter-button" data-filter="web">Web Development</button>
-				<button class="filter-button" data-filter="java">Java & Other Languages</button>
-				<button class="filter-button" data-filter="graphics">Graphic Design</button>
-				<button class="filter-button" data-filter="communications">Communications</button>
-			</div>
-		</div>
-	</div> <!-- filters -->
-
 	<div class="container">
-		<!-- Form Validator -->
-		<div id ="prj-container-1" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
-			<a href="work/validator.html">
-				<img src="img/iconValidator.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-1">Form Validator</h3>
-			</a>
-		</div>
-		<!-- Sprout CU -->
-		<div id ="prj-container-2" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
-			<a href="work/sprout.html">
-				<img src="img/iconSprout.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-2">Sprout Credit Union</h3>
-			</a>
-		</div>
-		<!-- Time's Past -->
-		<div id ="prj-container-3" class="project-preview col-sm-12 col-md-6 col-lg-3 filter java">
-			<a href="work/times-past.html">
-				<img src="img/iconTimesPast.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-3">Time's Past</h3>
-			</a>
-		</div>
-		<!-- IAT 339 Portfolio -->
-		<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
-			<a href="work/first-portfolio.html">
-				<img src="img/iconPortfolio.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-4">First Coded Portfolio</h3>
-			</a>
-		</div> -->
-		<!-- Helping Hand -->
-		<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-3 filter java">
-			<a href="work/helping-hand.html">
-				<img src="img/iconHelpingHand.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-5">Helping Hand</h3>
-			</a>
-		</div>
-		<!-- Adoption Awareness -->
-		<div id ="prj-container-6" class="project-preview col-sm-12 col-md-6 col-lg-3 filter graphics communications">
-			<a href="work/adoption-awareness.html">
-				<img src="img/iconAAM.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-6">Adoption Awareness Month</h3>
-			</a>
-		</div>
-		<!-- Studious Chef -->
-		<div id ="prj-container-7" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
-			<a href="work/studious-chef.html">
-				<img src="img/iconStudiousChef.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-7">The Studious Chef</h3>
-			</a>
-		</div>
-		<!-- Sunday Morning Simulator -->
-		<div id ="prj-container-8" class="project-preview col-sm-12 col-md-6 col-lg-3 filter java graphics">
-			<a href="work/sunday-morning.html">
-				<img src="img/iconSunday.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-8">Sunday Morning Simulator</h3>
-			</a>
-		</div>
-		<!-- Retrofit Your Home -->
-		<div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
-			<a href="work/retrofit-your-home.html">
-				<img src="img/iconRetrofit.png" alt="placeholder square" class="project-icon">
-				<h3 id="proj-header-4">Retrofit Your Home</h3>
-			</a>
-		</div>
-	</div> <!-- project previews -->
+		<div class="col-sm-12 col-md-3" id="filter-list">
+			<div class="row">
+				<div id="hideOnSM">
+					<h3>Filter</h3>
+					<ul id="filter-ul">
+						<li><button class="filter-button" data-filter="all">All</button></li>
+						<li><button class="filter-button" data-filter="web">Web Development</button></li>
+						<li><button class="filter-button" data-filter="game">Game Development</button></li>
+						<li><button class="filter-button" data-filter="graphics">Graphic Design</button></li>
+						<li><button class="filter-button" data-filter="communications">Communications</button></li>
+					</ul>
+					<!--
+					<button id="filter-link" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#filter-collapse" aria-expanded="false" aria-controls="filter-collapse">
+						FILTER
+					</button>
+					<div class="collapse" id="filter-collapse">
+						<div class="card card-body" id="filter-card">
+							<ul id="filter-ul">
+								<li><button class="filter-button" data-filter="all">All</button></li>
+								<li><button class="filter-button" data-filter="web">Web Development</button></li>
+								<li><button class="filter-button" data-filter="game">Game Development</button></li>
+								<li><button class="filter-button" data-filter="graphics">Graphic Design</button></li>
+								<li><button class="filter-button" data-filter="communications">Communications</button></li>
+							</ul>
+						</div>
+					</div>
+					-->
+				</div>
+			</div>
+		</div> <!-- end filter column -->
+
+		<div class = "col-sm-12 col-md-9">
+			<div class ="row">
+				<!-- Form Validator -->
+				<div id ="prj-container-1" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/validator.html">
+						<img src="img/iconValidator.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-1">Form Validator</h3>
+					</a>
+				</div>
+				<!-- Time's Past -->
+				<div id ="prj-container-3" class="project-preview col-sm-12 col-md-6 col-lg-4  filter game">
+					<a href="work/times-past.html">
+						<img src="img/iconTimesPast.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-3">Time's Past</h3>
+					</a>
+				</div>
+				<!-- Sprout CU -->
+				<div id ="prj-container-2" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/sprout.html">
+						<img src="img/iconSprout.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-2">Sprout Credit Union</h3>
+					</a>
+				</div>
+				<!-- IAT 339 Portfolio -->
+				<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/first-portfolio.html">
+						<img src="img/iconPortfolio.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-4">First Coded Portfolio</h3>
+					</a>
+				</div> -->
+				<!-- Helping Hand -->
+				<!--
+				<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-4  filter java">
+					<a href="work/helping-hand.html">
+						<img src="img/iconHelpingHand.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-5">Helping Hand</h3>
+					</a>
+				</div>
+				-->
+				<!-- Adoption Awareness -->
+				<div id ="prj-container-6" class="project-preview col-sm-12 col-md-6 col-lg-4  filter graphics communications">
+					<a href="work/adoption-awareness.html">
+						<img src="img/iconAAM.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-6">Adoption Awareness Month</h3>
+					</a>
+				</div>
+				<!-- Studious Chef -->
+				<div id ="prj-container-7" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/studious-chef.html">
+						<img src="img/iconStudiousChef.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-7">The Studious Chef</h3>
+					</a>
+				</div>
+				<!-- Sunday Morning Simulator -->
+				<!--
+				<div id ="prj-container-8" class="project-preview col-sm-12 col-md-6 col-lg-4  filter java graphics">
+					<a href="work/sunday-morning.html">
+						<img src="img/iconSunday.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-8">Sunday Morning Simulator</h3>
+					</a>
+				</div>
+			-->
+				<!-- Retrofit Your Home -->
+				<div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/retrofit-your-home.html">
+						<img src="img/iconRetrofit.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-4">Retrofit Your Home</h3>
+					</a>
+				</div>
+			</div>
+		</div> <!-- end form column -->
 
 	<footer class="footer" id="portfolio-footer">
 		<div class="container">
