--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -23,11 +23,12 @@
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
-				taylor wilkinson
+			<a href="../projects.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+				<p id="navTitle">taylor wilkinson</p>
+				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggleNavBar" aria-controls="toggleNavBar" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="#" class="nav-item nav-link">RESUME</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
@@ -46,14 +47,19 @@
 
 
 	<div class="container body-copy">
+		<div class="col-xs-12 col-md-6 mx-auto no-side-padding">
+			<figure id="noBorder">
+				<img src="../img/retrofit_mockup_home.png" class=".img-fluid" alt="Mockup of Retrofit Your Home's homepage">
+			</figure>
+		</div>
 		<div class="row full-row">
 			<div class="col-lg-6 no-side-padding">
 				<h1>Retrofit Your Home</h1>
 			</div>
 		</div> <!-- title section -->
 
-		<div class="row">
-			<div class="col-lg-4">
+		<div class="row full-row">
+			<div class="col-lg-4 no-side-padding">
 				<h2>team</h2>
 				<p>April Diax, Salathiel Wells, Taylor Wilkinson</p>
 			</div>
