Changes made to about page, Adoption Awareness page, and Times Past page

--- a/work/adoption-awareness.html
+++ b/work/adoption-awareness.html
@@ -74,7 +74,7 @@
 						<p>Interpersonal Communication<br>
 						<p>Copywriting</p>
 						<p>Press Release Writing</p>
-						<p>Social Media management</p>
+						<p>Social Media Management</p>
 					</div>
 				</div>
 			</div>
@@ -97,7 +97,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/AAM_WorldAdoptionDay_Cauldron.png" alt="Photo of the Olympic Cauldron Arms in Vancouver lit green for World Adoption Day.">
 					<figcaption>
 						Photo of the Olympic Cauldron Arms in Vancouver lit green for World Adoption Day. November 2017.
 					</figcaption>
@@ -114,7 +114,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/aam_NACACnotes.jpeg" alt="Photo of notes made by Taylor during NACAC's 2017 webinar">
 					<figcaption>
 						Photo of my notes made during NACAC's webinar. September 2017.
 					</figcaption>
@@ -131,13 +131,13 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/Thumbnail - AAM - 2 - WDFMTY.png" alt="Thumbnail made for one of the Adoption Awareness Month Videos">
 					<figcaption>
 						Thumbnail made for one of the Adoption Awareness Month Videos. November 2017.
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/AAM_PremiereProScreenshot.png" alt="Screenshot of Premiere Pro workplace, displaying one of my Adoption Awareness Month video projects.">
 					<figcaption>
 						Screenshot of Premiere Pro workplace, displaying one of my Adoption Awareness Month video projects. November 2017.
 					</figcaption>
@@ -154,7 +154,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/AAM_WorldAdoptionDay_Sails.png" alt="Photo of The Sails at Canada Place lit green for World Adoption Day">
 					<figcaption>
 						Photo of The Sails at Canada Place lit green for World Adoption Day. November 2017.
 					</figcaption>
@@ -169,9 +169,9 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/AFABC_christmas2017_Ecard.png" alt="Holiday 2017 e-card designed for AFABC">
 					<figcaption>
-						Photo of The Sails at Canada Place lit green for World Adoption Day. November 2017.
+					Holiday e-card designed for AFABC. November 2017.
 					</figcaption>
 				</figure>
 			</div>
