--- a/work/times-past.html
+++ b/work/times-past.html
@@ -68,20 +68,37 @@
 			</div>
 			<div class="col-lg-4 no-side-padding">
 				<h2>tools</h2>
-				<p>Unity 2018, Visual Studio, Git</p>
+				<p>Unity 2018 (C#)</p>
 			</div>
 			<div class="col-lg-4 no-side-padding">
 				<h2>my role</h2>
-				<p>Team Lead, Lead Developer, QA</p>
+				<p>Lead Developer, Team Lead</p>
 			</div>
 		</div> <!-- close project summary -->
 
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>brief</h2>
-				<p>Design and develop a video game as a course project for Advanced Game Design (IAT 410). <em>Time's Past</em> is a narrative point-and-click style adventure game, built in Unity 2018. Fall 2018.</p>
+				<p>Design and develop a video game as a course project for Advanced Game Design (IAT 410). Time’s Past is a narrative adventure/puzzle game inspired by the point-and-click genre of games. Built in Unity 3D. Fall 2018.</p>
+				<p></p>
 			</div>
 		</div> <!-- end of section :: brief -->
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>design</h2>
+				<p>When brainstorming, Jules presented her idea for a game based around solving puzzles across time by using a seeing-stone to view the past. We found inspiration in point-and-click adventure games, such as Kings Quest and The Day Of The Tentacle. Through these early iterations, we fleshed out this idea and the narrative to help inform our design.</p>
+				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
+			</div>
+      <div class="col-lg-6">
+				<figure>
+          <img src="../img/timesPast_designMeeting.jpg" alt="Photograph of our brainstorming sessions when designing our alpha prototype.">
+					<figcaption>
+						Photograph of our brainstorming sessions when designing our alpha prototype. October, 2018.
+					</figcaption>
+				</figure>
+			</div>
+		</div> <!-- end of section :: game design -->
 
 		<div class="row">
 			<div class="col-lg-6">
@@ -126,6 +143,9 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+				<figcaption>
+					Three screenshots of the game's first level, showcasing Harriet and Basil's perspectives, as well as the Gem Collection UI. December 2018.
+				</figcaption>
       </div><!-- row 2 -->
 		</div> <!-- end of section :: game development -->
 
