--- a/about.html
+++ b/about.html
@@ -48,27 +48,42 @@
 	<div class="container body-copy">
 		<div class="row full-row">
 			<div class="col no-side-padding">
-				<h1>front-end developer. d&d enthusiast.</h1>
+				<h1>Greetings, weary traveller.</h1>
 			</div>
 		</div> <!-- summary heading -->
 
 		<div class="row">
-			<!-- <div class="col-lg-3 col-md-6 col-sm-12"> -->
-			<div class="col col-lg-3 col-md-6">
-				<img src="img/snapchat-selfie-cropped.jpg" class="rounded" alt="Snapchat selfie">
+			<div class="col-12 col-sm-12 col-md-6 col-lg-4">
+				<img src="img/portrait.jpg" class="rounded" alt="A photograph of Taylor in a stairwell">
 			</div>
-			<!-- <div class="col-lg-6 col-md-6 col-sm-12"> -->
-			<div class="col col-lg-6">
-				<!-- <h2>front-end developer. d&d enthusiast.</h2> -->
-				<p>Greetings, weary traveller. I'm a front-end web developer living in Vancouver, B.C.</p>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-4">
+				<p>I'm a front-end web developer and designer living in Vancouver, B.C. I'm attending SFU and pursuing a B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
+				<p>My goal is to grow as a developer and designer by creating applications that provide experiences that are not only enjoyable for the user, but are considerate of a diverse userbase regardless of economic, or ethnic status. As an articulate communicator, I'm able to engage with coworkers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
+				<p>Outside of work-related stuff, you can talk with me about D&D, video games, and Rupaul's Drag Race.</p>
 			</div>
 		</div> <!-- end the first summary row -->
 
+  </div><!-- landing page content TBD -->
 
-    </div><!-- landing page content TBD -->
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
 
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+  <script src="../js/jquery.slim.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/scrollButton.js"></script>
 </body>
 </html>
