new About picture and removed images from img folder

--- a/work/times-past.html
+++ b/work/times-past.html
@@ -194,7 +194,7 @@
 		</div> <!-- end of section :: reflections -->
 	</div> <!-- landing page content TBD -->
 
-	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
+	<button onclick="topFunction()" id="backToTopButton" title="Go to top">back to top</button> <!-- Button to scroll back to top because, that's too much work! -->
 
 	<footer class="footer" id="portfolio-footer">
 		<div class="container">
