--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Projects - Taylor Wilkinson</title>
+	<title>Taylor Wilkinson</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,11 +23,11 @@
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
 
-			<a href="projects.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
 				<p id="navTitle">taylor wilkinson</p>
 				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
@@ -38,7 +38,7 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
+					<a href="index.html" class="nav-item nav-link">PROJECTS</a>
 					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
