Removing Graphic Design filter on home page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li><button class="filter-button" data-filter="all">All</button></li>
 						<li><button class="filter-button" data-filter="web">Web Development</button></li>
 						<li><button class="filter-button" data-filter="game">Game Development</button></li>
-						<li><button class="filter-button" data-filter="graphics">Graphic Design</button></li>
+						<!-- <li><button class="filter-button" data-filter="graphics">Graphic Design</button></li> -->
 						<li><button class="filter-button" data-filter="communications">Communications</button></li>
 					</ul>
 					<!--
