Changes to about page columns and H1 margins

--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
 		</div> <!-- summary heading -->
 
 		<div class="row">
-			<div class="col-12 col-lg-3 col-md-4 col-sm-12 col-xs-12">
+			<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
 				<img src="img/portrait-crop.png" alt="A photograph of Taylor in a stairwell" id="myBigOlFace">
 			</div>
-			<div class="col-12 col-lg-9 col-md-8 col-sm-12 col-xs-12">
+			<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 				<p>I'm a front-end web developer and designer living in Vancouver, B.C. I'm attending SFU and pursuing a B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
 				<p>My goal is to grow as a developer and designer by creating applications that provide experiences that are not only enjoyable for the user, but are considerate of a diverse userbase regardless of economic, or ethnic status. As an articulate communicator, I'm able to engage with coworkers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
 				<p>Outside of work-related stuff, you can talk with me about D&D, video games, and Rupaul's Drag Race.</p>
